# USD-Diary

./: .gitignore  CMakeLists.txt  README.md  libcli_processor.dylib
scope_reparent/cpp/: CMakeLists.txt  main.cpp
scope_reparent/include/: cli_processor.h  cli_processor.hpp
scope_reparent/src/: cli_processor.cpp  main.cpp
scope_reparent/usda/: base.usda
